STM API conecta sin problema, el error no es la conexión con la API, se

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-STM_CLIENT_ID=YOUR_CLIENT_ID_HERE
-STM_CLIENT_SECRET=YOUR_CLIENT_SECRET_HERE
+STM_CLIENT_ID=d7916e2b
+STM_CLIENT_SECRET=164c5cf512e692dbfcc2fbda1f0ec0a1
