I see this error with the app, reported by NextJS, please fix it. The er

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-STM_CLIENT_ID=d7916e2b
-STM_CLIENT_SECRET=164c5cf512e692dbfcc2fbda1f0ec0a1
+
+# Replace with your actual STM API credentials
+STM_CLIENT_ID=
+STM_CLIENT_SECRET=
